syntax = "proto3";

package dtm_boxes_efcore;
import "google/protobuf/empty.proto";

option csharp_namespace = "EasyAbp.Abp.EventBus.Boxes.Dtm.EfCore";
option go_package = "./dtm_boxes_efcore";

message DtmStyleResponse {
  string dtm_result = 1;
}

message QueryPreparedRequest {
  string ActionApiToken = 1;
  DbConnectionLookupInfo Info = 2;
}

message DbConnectionLookupInfo {
  string DbContext = 1;
  string TenantId = 2;
  string HashedConnectionString = 3;
}

service DtmEfCoreGrpcService {
  rpc QueryPrepared(QueryPreparedRequest) returns (DtmStyleResponse) {}
}